Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20191

Qt::KeypadModifier does not work with setShortcut

    XMLWordPrintable

Details

    • 6265ac63fe85e1ff8b2d9ca3d023b3a1a8b281f0 (4.8)

    Description

      Limiting a shortcut of a button to react only for keypad events is not working with Qt::KeypadModifier. For example,
      setShortcut ( QKeySequence( Qt::KeypadModifier + Qt::Key_5 ) );
      does not create a shortcut to a button. When
      setShortcut ( QKeySequence( Qt::Key_5 ) );
      creates one, but it is not limited to keypad.
      Attached example shows the issue.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Unassigned Unassigned
              qtcomsupport Qt Support
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes